Add image and setting up left grid

--- a/index.html
+++ b/index.html
@@ -5,13 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Admin Dashboard using HTML<CSS<JAvaScript</HTml></title>
      <!-- Grab material icons from Google API-->
-     <link href="<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-     rel="stylesheet">"
+     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+     rel="stylesheet">
      <!-- Styling-->
-    <link rel="stlesheet"href="./style.css"
+    <link rel="stylesheet"href="./style.css"
    
 </head>
 <body>
+    <div class="container">
+        <!-- #region side bar-->
+        <aside>
+            <!-- Top-->
+            <dic class="top">
+                <div class="logo">
+                    <img src="images/WSolid copy 2.png">
+                    <!-- Wording DashBoard -->
+                    <h2>Admin <span class="danger">Dashboard</span></h2>
+                </div>
+                <div class="close" id="close-btn">
+                    <span class="material-icons-sharp">close</span>
+                </div>
+            </div>
+            <div class="sidebar">
+                <a href="#">
+                    <span class="material-symbols-outlined">grid_view</span>
+                    <h3>Dashboard</h3>
+                </a>
+            </div>
+        </aside>
+    </div>
     
 </body>
 </html>
