--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Admin Dashboard using HTML<CSS<JAvaScript</HTml></title>
-     <!-- Grab material icons from Google API-->
+     <!-- Grab material icons from Google Material CDN -->
      <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
      rel="stylesheet">
-     <!-- Styling-->
-    <link rel="stylesheet"href="./style.css"
-   
+     <!-- Styling -->
+    <link rel="stylesheet"href="style.css">
 </head>
 <body>
     <div class="container">
-        <!-- #region side bar-->
+        <!-- region: left side bar -->
         <aside>
             <!-- Top-->
             <dic class="top">
@@ -28,12 +28,32 @@
             </div>
             <div class="sidebar">
                 <a href="#">
-                    <span class="material-symbols-outlined">grid_view</span>
+                    <span class="material-icons-sharp">grid_view</span>
                     <h3>Dashboard</h3>
                 </a>
+                <a href="#">
+                    <span class="material-icons-sharp">grid_view</span>
+                    <h3>Analytics</h3>
+                </a>
+                <a href="#">
+                    <span class="material-icons-sharp">grid_view</span>
+                    <h3>Reports</h3>
+                </a>
+                <a href="#">
+                    <span class="material-icons-sharp">grid_view</span>
+                    <h3>Issues</h3>
+                    <span class="issue-count">3</span>
+                </a>
+                <a href="#">
+                    <span class="material-icons-sharp">grid_view</span>
+                    <h3>Messages</h3>
+                    <span class="message-count">12</span>
+                </a>
+                <a href="#">
+                    <span class="material-icons-sharp">grid_view</span>
+                    <h3>Settings</h3>
             </div>
         </aside>
     </div>
-    
 </body>
 </html>
