refactor symbol to icon

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="Z X-UA-Compatible" content="IE-edge"
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Admin Dashboard using HTML<CSS<JAvaScript</HTml></title>
@@ -9,7 +10,7 @@
      <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
      rel="stylesheet">
      <!-- Styling -->
-    <link rel="stylesheet"href="style.css">
+    <link rel="stylesheet"href="./style.css">
 </head>
 <body>
     <div class="container">
@@ -20,7 +21,7 @@
                 <div class="logo">
                     <img src="images/WSolid copy 2.png">
                     <!-- Wording DashBoard -->
-                    <h2>Admin <span class="danger">Dashboard</span></h2>
+                    <h2>Admin<span class="danger">Dashboard</span></h2>
                 </div>
                 <div class="close" id="close-btn">
                     <span class="material-icons-sharp">close</span>
@@ -52,6 +53,7 @@
                 <a href="#">
                     <span class="material-icons-sharp">grid_view</span>
                     <h3>Settings</h3>
+                </a>
             </div>
         </aside>
     </div>
