Added extention to google URL w/ commenting

--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="Z X-UA-Compatible" content="IE-edge"
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Admin Dashboard using HTML<CSS<JAvaScript</HTml></title>
      <!-- Grab material icons from Google Material CDN -->
-     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+     <!-- remember to add 'sets' to URL params ex. (+Sharp)  -->
+
+     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp"
      rel="stylesheet">
      <!-- Styling -->
     <link rel="stylesheet"href="./style.css">
@@ -17,7 +18,7 @@
         <!-- region: left side bar -->
         <aside>
             <!-- Top-->
-            <dic class="top">
+            <div class="top">
                 <div class="logo">
                     <img src="images/WSolid copy 2.png">
                     <!-- Wording DashBoard -->
@@ -27,6 +28,7 @@
                     <span class="material-icons-sharp">close</span>
                 </div>
             </div>
+
             <div class="sidebar">
                 <a href="#">
                     <span class="material-icons-sharp">grid_view</span>
