--- a/index.html
+++ b/index.html
@@ -31,29 +31,29 @@
 
             <div class="sidebar">
                 <a href="#">
-                    <span class="material-icons-sharp">grid_view</span>
+                    <span class="material-icons-sharp">person_outline</span>
                     <h3>Dashboard</h3>
                 </a>
                 <a href="#">
-                    <span class="material-icons-sharp">grid_view</span>
+                    <span class="material-symbols-sharp">analytics</span>
                     <h3>Analytics</h3>
                 </a>
                 <a href="#">
-                    <span class="material-icons-sharp">grid_view</span>
+                    <span class="material-icons-sharp">summarize</span>
                     <h3>Reports</h3>
                 </a>
                 <a href="#">
-                    <span class="material-icons-sharp">grid_view</span>
+                    <span class="material-icons-sharp">bug_report</span>
                     <h3>Issues</h3>
                     <span class="issue-count">3</span>
                 </a>
                 <a href="#">
-                    <span class="material-icons-sharp">grid_view</span>
+                    <span class="material-icons-sharp">mail</span>
                     <h3>Messages</h3>
                     <span class="message-count">12</span>
                 </a>
                 <a href="#">
-                    <span class="material-icons-sharp">grid_view</span>
+                    <span class="material-icons-sharp">settings</span>
                     <h3>Settings</h3>
                 </a>
             </div>
