--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
             <div class="sidebar">
                 <a href="#">
-                    <span class="material-icons-sharp">person_outline</span>
+                    <span class="material-icons-sharp">dashboard</span>
                     <h3>Dashboard</h3>
                 </a>
                 <a href="#">
