fix analytics icon and fonts/padding

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <h3>Dashboard</h3>
                 </a>
                 <a href="#">
-                    <span class="material-symbols-sharp">analytics</span>
+                    <span class="material-icons-sharp">analytics</span>
                     <h3>Analytics</h3>
                 </a>
                 <a href="#">
