--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Admin Dashboard using HTML<CSS<JAvaScript</HTml></title>
+    <title>Admin Dashboard using HTML<CSS<JAvaScript</HTml></title>
      <!-- Grab material icons from Google Material CDN -->
      <!-- remember to add 'sets' to URL params ex. (+Sharp)  -->
 
@@ -22,7 +22,7 @@
                 <div class="logo">
                     <img src="images/WSolid copy 2.png">
                     <!-- Wording DashBoard -->
-                    <h2>Admin<span class="danger">Dashboard</span></h2>
+                    <h2>Health<span class="danger">Board</span></h2>
                 </div>
                 <div class="close" id="close-btn">
                     <span class="material-icons-sharp">close</span>
