--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="sidebar">
                 <a href="#">
                     <span class="material-icons-sharp">dashboard</span>
-                    <h3>Dashboard</h3>
+                    <h3>Overview</h3>
                 </a>
                 <a href="#">
                     <span class="material-icons-sharp">analytics</span>
