--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <span class="material-icons-sharp">dashboard</span>
                     <h3>Overview</h3>
                 </a>
-                <a href="#">
+                <a href="#" class="selected">
                     <span class="material-icons-sharp">analytics</span>
                     <h3>Analytics</h3>
                 </a>
@@ -58,6 +58,42 @@
                 </a>
             </div>
         </aside>
+
+        <!-- region: end of left side bar -->
+
+         <!-- region: Middle -->
+         <main>
+            <h1>Overview</h1>
+
+            <div class="date">
+                <input type="date">   
+            </div>
+
+            <div class="Insight">
+                <div class="Issues">
+                    <span class="material-icons-sharp">compare</span>
+                    <div class="middle">
+                        <div class="left">
+                            <h3>Issues</h3>
+                            <h1> 2 </h1>
+                        </div>
+                        <div class="progress">
+                            <svg>
+                                <circle cx='38' cy='38' r='36'></circle>
+                            </svg>
+                        </div>
+
+                        
+
+                    </div>
+                </div>
+            </div>
+
+
+
+
+         </main>
+
     </div>
 </body>
 </html>
