--- a/index.html
+++ b/index.html
@@ -70,28 +70,68 @@
             </div>
 
             <div class="Insight">
-                <div class="Issues">
-                    <span class="material-icons-sharp">compare</span>
+                <div class="Bug Status">
+                    <span class="material-icons-sharp">feed</span>
                     <div class="middle">
                         <div class="left">
-                            <h3>Issues</h3>
-                            <h1> 2 </h1>
+                            <h3>Bug Status</h3>
+                            <h1>60%</h1>
                         </div>
                         <div class="progress">
                             <svg>
                                 <circle cx='38' cy='38' r='36'></circle>
                             </svg>
+                            <div class="number">
+                                <p>3</p>   
+                                <p>4</p>   
+                                <p>7</p>   
+                            </div>
                         </div>
-
-                        
-
                     </div>
+                    <small class="text-muted">Last 24 hours</small>  
                 </div>
+                <!--End of Bugs_status-->
+                <div class="Milestones">
+                    <span class="material-icons-sharp">feed</span>
+                    <div class="middle">
+                        <div class="left">
+                            <h3>Milestones</h3>
+                            <h1> 60%</h1>
+                        </div>
+                        <div class="progress">
+                            <svg>
+                                <circle cx='38' cy='38' r='36'></circle>
+                            </svg>
+                            <div class="number">
+                                <p>2</p>   
+                                <p>5</p>   
+                                <p>7</p>    
+                            </div>
+                        </div>
+                    </div>
+                    <small class="text-muted">Last 24 hours</small>  
+                </div>
+                <!--End of Milestones-->
+                <div class="New Tickets">
+                    <span class="material-icons-sharp">feed</span>
+                    <div class="middle">
+                        <div class="left">
+                            <h3>Tickets</h3>
+                            <h1> 60%</h1>
+                        </div>
+                        <div class="progress">
+                            <svg>
+                                <circle cx='38' cy='38' r='36'></circle>
+                            </svg>
+                            <div class="number">
+                                <p>3</p>      
+                            </div>
+                        </div>
+                    </div>
+                    <small class="text-muted">Last 24 hours</small>  
+                </div>
+                <!--End of new Tickets-->
             </div>
-
-
-
-
          </main>
 
     </div>
