--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </div>
 
             <div class="Insight">
-                <div class="Bug Status">
+                <div class="Status">
                     <span class="material-icons-sharp">feed</span>
                     <div class="middle">
                         <div class="left">
@@ -91,33 +91,31 @@
                     <small class="text-muted">Last 24 hours</small>  
                 </div>
                 <!--End of Bugs_status-->
-                <div class="Milestones">
+                <div class="Statust">
                     <span class="material-icons-sharp">feed</span>
                     <div class="middle">
                         <div class="left">
                             <h3>Milestones</h3>
-                            <h1> 60%</h1>
+                            <h1> 75%</h1>
                         </div>
                         <div class="progress">
                             <svg>
                                 <circle cx='38' cy='38' r='36'></circle>
                             </svg>
                             <div class="number">
-                                <p>2</p>   
-                                <p>5</p>   
-                                <p>7</p>    
+                                <p>2</p>    
                             </div>
                         </div>
                     </div>
                     <small class="text-muted">Last 24 hours</small>  
                 </div>
                 <!--End of Milestones-->
-                <div class="New Tickets">
+                <div class="Status">
                     <span class="material-icons-sharp">feed</span>
                     <div class="middle">
                         <div class="left">
-                            <h3>Tickets</h3>
-                            <h1> 60%</h1>
+                            <h3>New Tickets</h3>
+                            <h1> 6%</h1>
                         </div>
                         <div class="progress">
                             <svg>
