"Update to cards"

--- a/index.html
+++ b/index.html
@@ -82,10 +82,11 @@
                                 <circle cx='38' cy='38' r='36'></circle>
                             </svg>
                             <div class="number">
-                                <p>3</p>   
-                                <p>4</p>   
-                                <p>7</p>   
+                                <p> 3 - OPEN </p>   
+                                <p> 4 - CLOSED </p>   
+                                <p> 7 - TOTAL </p>   
                             </div>
+                            
                         </div>
                     </div>
                     <small class="text-muted">Last 24 hours</small>  
@@ -103,7 +104,7 @@
                                 <circle cx='38' cy='38' r='36'></circle>
                             </svg>
                             <div class="number">
-                                <p>2</p>    
+                                <p>2 - REACHED</p>    
                             </div>
                         </div>
                     </div>
